# math-ai-review-backend

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  ca.pem  config.json  config_test.json  libmariadb.def  main.cc  my.cnf  mysql_async_wrapper.c  mysql_async_wrapper.cc  mysql_async_wrapper.h  render.yaml  test_dll_async.cpp  test_mariadb_sync.cpp  test_mysql.cpp  test_mysql_async.cpp  test_wrapper_link.cpp
.github/workflows/: ci.yml
clients/: AiClient.cc  AiClient.h
controllers/: AdminStatsController.cc  AdminStatsController.h  AiController.cc  AiController.h  AuthController.cc  AuthController.h  ChapterController.cc  ChapterController.h  CourseController.cc  CourseController.h  HealthController.cc  HealthController.h  KnowledgeController.cc  KnowledgeController.h  PaperController.cc  PaperController.h  QuestionController.cc  QuestionController.h  StudyController.cc  StudyController.h  UserController.cc  UserController.h
dao/: AiExplanationDao.cc  AiExplanationDao.h  ChapterDao.cc  ChapterDao.h  CourseDao.cc  CourseDao.h  KnowledgeDao.cc  KnowledgeDao.h  QuestionDao.cc  QuestionDao.h  StudyDao.cc  StudyDao.h  UserDao.cc  UserDao.h
database/: add_auth_version.sql  add_student_paper_library.sql  add_students.sql  add_study_records.sql  fix_chinese.sql  reset_pwd.sql  schema.sql  test_data.sql  update_course_covers.sql
database/migrations/: README.md  V001__verify_existing_schema.sql  V002__add_auth_version.sql
docs/: UI_DESIGN_SYSTEM.md  UI_REDESIGN_REPORT.md
filters/: AdminAuthFilter.cc  AdminAuthFilter.h  RateLimitFilter.cc  RateLimitFilter.h  UserAuthFilter.cc  UserAuthFilter.h
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js
frontend/e2e/: product-smoke.spec.js
frontend/scripts/: capture-ui.mjs
frontend/src/: App.vue  main.js
frontend/src/api/: admin.js  auth.js  course.js  request.js
frontend/src/components/: AppLogo.vue  FormulaContent.vue  MobileBottomNav.vue  PageHeader.vue  StatCard.vue
frontend/src/data/: courseTextbooks.js
frontend/src/layouts/: AdminLayout.vue  StudentLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: user.js
frontend/src/styles/: design-system.css
frontend/src/utils/: authStorage.js  renderMathContent.js
frontend/src/views/: Login.vue
frontend/src/views/admin/: AdminHome.vue  ChapterManage.vue  CourseManage.vue  KnowledgeManage.vue  PaperManage.vue  QuestionManage.vue  UserManage.vue
frontend/src/views/student/: ChapterDetail.vue  CourseDetail.vue  CourseList.vue  Home.vue  KnowledgeDetail.vue  KnowledgeList.vue  PaperList.vue  QuestionDetail.vue  QuestionList.vue  StudyCenter.vue
frontend/tests/: authStorage.test.js  renderMathContent.test.js
models/: ModelPlaceholders.h  User.h
scripts/: build-msys.bat  build-msys.ps1  docker-entrypoint.sh  init-db.bat  init-db.ps1  migrate-db.sh  push-github.bat  push-github.ps1  run-msys.bat  run-msys.ps1
services/: AiService.cc  AiService.h  AuthService.cc  AuthService.h  ChapterService.cc  ChapterService.h  CourseService.cc  CourseService.h  KnowledgeService.cc  KnowledgeService.h  QuestionService.cc  QuestionService.h  ServicePlaceholders.h  StudyService.cc  StudyService.h
tests/: PasswordUtilTest.cc
utils/: AuthContext.cc  AuthContext.h  DbClientProvider.h  EnvLoader.cc  EnvLoader.h  ErrorHandler.cc  ErrorHandler.h  JsonResponse.h  JwtUtil.cc  JwtUtil.h  MysqlSyncClient.cc  MysqlSyncClient.h  PasswordUtil.cc  PasswordUtil.h  RequestValidation.h
